[project]
name = "Passat-AI-Telemetry"
version = "0.1.0"
description = "a car telemetry project"
authors = [
    {name = "Rotimi", email = "olarotimi@pm.me"},
]
dependencies = ["obd>=0.7.2", "mypy>=1.15.0", "ruff>=0.11.6"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
